mxr-test as it was on 20-Mar-2008

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <HTML>
 <HEAD>
  <TITLE>Mozilla Cross-Reference</TITLE>
- <link rel="icon" href="/mxr.png" type="image/png">
  <style type="text/css">
 <!--
 div {
@@ -18,19 +17,21 @@ font-size: 70%;
 	LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 
 <TABLE BGCOLOR="#000000" WIDTH="100%" BORDER=0 CELLPADDING=0 CELLSPACING=0>
-<TR><TD><A HREF="http://www.mozilla.org/"><IMG
- SRC="http://www.mozilla.org/images/mozilla-banner.gif" ALT=""
- BORDER=0 WIDTH=600 HEIGHT=58></A></TD></TR></TABLE>
+<tr><td><a id="logo href="http://www.mozilla.org/"><img
+ src="http://www.mozilla.org/images/mozilla-banner.gif" alt=""
+ border=0 width=600 height=58></a></td></tr></table>
 
 <TABLE BORDER=0 CELLPADDING=0 CELLSPACING=6 WIDTH="100%">
  <TR>
-  <TD VALIGN=TOP ALIGN=LEFT>
+  <TD WIDTH=35% ALIGN=LEFT VALIGN=TOP>
+
    <TABLE BORDER CELLPADDING=10 CELLSPACING=0 WIDTH="100%" BGCOLOR="#EEEEEE">
     <TR>
      <TD>
 
-      <P>
-      <H2 ALIGN=CENTER>Starting Points:</H2>
+
+
+      <H2 ALIGN=CENTER><i>$treename</i> Starting Points</H2>
 
          <FONT SIZE="+1"><A HREF="source/"><B>/$rootname</B></A></FONT>
 <BR>
@@ -83,8 +84,8 @@ change roots from within the search tools)</span>
 <H1>Using this Cross Reference</H1>
 <P>This is a cross reference designed to display
 source code.
-Sources may be retrieved via cvs, svn, apt, or through some
-other process.
+Sources may be retrieved via <em>cvs</em>, <em>svn</em>, <em>git</em>,
+<em>apt</em>, or through some other process.
 
 <P>It's possible to search through the entire source text (but this
 is very slow, it will work, but it is suggested that you at least
@@ -109,18 +110,16 @@ especially useful.
 <P>(Don't use a web-crawler to try and download all of these pages;
 the CGIs will feed you several <I>gigabytes</I> worth of generated HTML!)
 
-<p>
-Complaints about this MXR should be directed elsewhere as none of
-the people listed on this page know or care about this MXR.
+<P>(That's beyond the nearly <strong>30 gigabytes</strong> worth of
+content that is indexed here.)
 
+<p>
 <!-- this would be a good place for the mxr administrator to include
   ++ a contact link.
   -->
 
-
-<p>
-</p>
-
+Complaints about this MXR should be directed elsewhere as none of
+the people listed on this page know or care about this MXR.
 
 <!--
   ++ / good place
