--- a/root/index.html
+++ b/root/index.html
@@ -1,6 +1,5 @@
 <HTML>
 <HEAD>
-<link rel="icon" href="/mxr.png" type="image/png">
  <TITLE>Mozilla Cross-Reference</TITLE>
 <style>
 <!--
@@ -32,23 +31,12 @@ font-size: 70%;
 
       <DL>
       <DT>
-         <FONT SIZE="+1"><A HREF="seamonkey/"><B>SeaMonkey</B></A></FONT>
          (updated hourly)
+         <FONT SIZE="+1"><A HREF="seamonkey/"><B>SeaMonkey</B></A></FONT>
       </DT>
       <DD>
          <FONT SIZE="-1">
           This module is SeaMonkeyAll, the trunk of the Mozilla browser project.
-         </FONT>
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="firefox/"><B>Firefox</B></A></FONT>
-         (updated hourly)
-      </DT>
-      <DD>
-         <FONT SIZE="-1">
-          The trunk source specific to the Firefox web browser.  Also available is the 
-          <a href="firefox2/">Firefox 2.0 Branch</a> (updated nightly).
          </FONT>
       </DD>
 
@@ -59,7 +47,7 @@ font-size: 70%;
       </DT>
       <DD>
          <FONT SIZE="-1">
-          This is the Mozilla 1.8.0 branch of the overall project.
+          This is the Mozilla 1.8.0 branch.
          </FONT>
       </DD>
 
@@ -134,7 +122,7 @@ font-size: 70%;
       <DT>
          <FONT SIZE="+1"><A HREF="mozilla/"><B>Mozilla</B></A></FONT> /
          <FONT SIZE="+1"><A HREF="l10n/"><B>l10n</B></A></FONT>
-	 (updated hourly)
+	 (updated nightly)
       </DT>
       <DD>
          <FONT SIZE="-1">
@@ -171,8 +159,7 @@ font-size: 70%;
       <DD>
          <FONT SIZE="-1">
           This is the Bugzilla bug-tracking system.
-          Also the <a href="bugzilla3.0/"><b>Bugzilla 3.0 Branch</b></a>,
-          the <a href="bugzilla2.22/"><b>Bugzilla 2.22 Branch</b></a>
+          Also the <a href="bugzilla2.18/"><b>Bugzilla 2.18 Branch</b></a>
           and the <a href="bugzilla2.20/"><b>Bugzilla 2.20 Branch</b></a>.
          </FONT>
 
