HTML Validation fixes for the two index pages, remove a whole mess of dead files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
  <TITLE>Mozilla Cross-Reference</TITLE>
@@ -17,13 +18,13 @@ font-size: 70%;
 	LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 
 <table bgcolor="#000000" class=banner width="100%" border=0 cellpadding=0 cellspacing=0>
-<tr><td><a id="logo href="http://www.mozilla.org/"><img
+<tr><td><a id="logo" href="http://www.mozilla.org/"><img
  src="http://www.mozilla.org/images/mozilla-banner.gif" alt="mozilla.org"
  border=0 width=600 height=58></a></td></tr></table>
 
 <TABLE BORDER=0 CELLPADDING=0 CELLSPACING=6 WIDTH="100%">
  <TR>
-  <TD WIDTH=35% ALIGN=LEFT VALIGN=TOP>
+  <TD WIDTH="35%" ALIGN=LEFT VALIGN=TOP>
 
    <TABLE BORDER CELLPADDING=10 CELLSPACING=0 WIDTH="100%" BGCOLOR="#EEEEEE">
     <TR>
@@ -40,7 +41,7 @@ font-size: 70%;
           of this tree.
          </FONT>
 <FORM METHOD=GET ACTION="find">
-<div align="right"><nobr>
+<div align="right">
 <br> <b><a href="search">Search for</a>:</b>
               <input type=text name="text" size=29 value="">
 <select name=kind>
@@ -52,9 +53,8 @@ font-size: 70%;
               <INPUT TYPE=TEXT NAME="string" maxlength="29" VALUE="" SIZE=29>
 <br>
 	      <INPUT TYPE=SUBMIT VALUE="Find">
-</nobr></div>
+</div>
 </FORM>
-</p>
 <p>
 <a href="../">Pick another root</a> <span class="note">(you can also
 change roots from within the search tools)</span>
