Add favicon, fix config for production

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HTML>
 <HEAD>
  <TITLE>Mozilla Cross-Reference</TITLE>
+ <link rel="icon" href="/mxr.png" type="image/png">
  <style type="text/css">
 <!--
 div {
