--- a/root/index.html
+++ b/root/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+ <link rel="icon" href="/mxr.png" type="image/png">
  <title>Mozilla Cross-Reference</title>
 <style type="text/css">
 <!--
