Bug 428089: Remove/rename a bunch of stuff that accidently made it here from landfill

--- a/root/index.html
+++ b/root/index.html
@@ -92,42 +92,14 @@ dl.rootlist dd {
       </dd>
 
       <DT>
-         <FONT SIZE="+1"><A HREF="mozilla1.0/"><B>Mozilla 1.0</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is the Mozilla 1.0 release.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="mozilla1.0.x/"><B>Mozilla 1.0.x</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is the Mozilla 1.0 branch.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="mozilla1.4.x/"><B>Mozilla 1.4.x</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is the Mozilla 1.4 branch.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="mozilla1.7.x/"><B>Mozilla 1.7.x</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is the Mozilla 1.7 branch.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="mozilla1.8.x/"><B>Mozilla 1.8.x</B></A> / <A HREF="l10n-mozilla1.8.x/"><B>l10n</B></A></FONT>
+         <FONT SIZE="+1"><A HREF="mozilla1.8/"><B>Mozilla 1.8</B></A> / <A HREF="l10n-mozilla1.8/"><B>l10n</B></A></FONT>
       </DT>
       <DD class="note">
           This is the Mozilla 1.8 branch.  This module also hosts Aviary's 1.5 Branch (e.g. Firefox 2.0), for Mozilla toolkit derived projects.
       </DD>
 
       <DT>
-         <FONT SIZE="+1"><A HREF="mozilla1.8.0.x/"><B>Mozilla 1.8.0.x</B></A> / <A HREF="l10n-mozilla1.8.0.x/"><B>l10n</B></A></FONT>
+         <FONT SIZE="+1"><A HREF="mozilla1.8.0/"><B>Mozilla 1.8.0</B></A> / <A HREF="l10n-mozilla1.8.0/"><B>l10n</B></A></FONT>
       </DT>
       <DD class="note">
           This is the Mozilla 1.8.0 branch.  This is for security releases products released from Mozilla 1.8 Release (e.g. Firefox 1.5).
@@ -172,46 +144,11 @@ dl.rootlist dd {
       </DD>
 
       <DT>
-         <FONT SIZE="+1"><A HREF="grendel/"><B>Grendel</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This module is Grendel, a mail reader written in java.
-      </DD>
-
-      <DT>
          <FONT SIZE="+1"><A HREF="ef/"><B>Electrical Fire</B></A></FONT>
       </DT>
       <DD class="note">
           This is /mozilla/ef, a multi-platform Just&#8209;In&#8209;Time
           Java compiler.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="songbird/"><B>Songbird</B></A></FONT>
-      </DT>
-      <DD>
-         <FONT SIZE="-1">
-          This contains the head for <a href="http://www.songbirdnest.com/">Songbird</a>.
-          (This includes integration with trac.)
-         </FONT>
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="songbird-all/"><B>Songbird (all)</B></A></FONT>
-      </DT>
-      <DD>
-         <FONT SIZE="-1">
-          This contains the entire source for <a href="http://www.songbirdnest.com/">Songbird</a>.
-          (This includes integration with trac.)
-         </FONT>
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="gcc-4.0.2/"><B>GCC 4.0.2</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This contains the entire <a href="http://gcc.gnu.org/">gcc</a>
-          source for 4.0.2. In particular, it has G++.
       </DD>
 
       <DT>
@@ -237,7 +174,7 @@ dl.rootlist dd {
           <a href="webtools/source/tinderbox">Tinderbox</a>
           (<a href="webtools/source/tinderbox2">2</a> and
           <a href="webtools/source/tinderbox3">3</a>),
-          <a href="webtools/source/lxr">MXR</a>,
+          <a href="webtools/source/lxr">LXR</a>,
           <a href="webtools/source/mozbot">Mozbot</a>.
       </DD>
 
@@ -250,50 +187,27 @@ dl.rootlist dd {
       </DD>
 
       <DT>
-         <FONT SIZE="+1"><A HREF="bugzilla3.0.x/"><B>Bugzilla3.0.x</B></A></FONT>
+         <FONT SIZE="+1"><A HREF="bugzilla3.0/"><B>Bugzilla3.0</B></A></FONT>
       </DT>
       <DD class="note">
           This is <a href="http://bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/3.0/html/">3.0.x</a>.
+          <a href="http://www.bugzilla.org/docs/3.0/html/">3.0</a>.
       </DD>
 
       <DT>
-         <FONT SIZE="+1"><A HREF="bugzilla2.22.x/"><B>Bugzilla2.22.x</B></A></FONT>
+         <FONT SIZE="+1"><A HREF="bugzilla2.22/"><B>Bugzilla2.22</B></A></FONT>
       </DT>
       <DD class="note">
           This is <a href="http://bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/2.22/html/">2.22.x</a>.
+          <a href="http://www.bugzilla.org/docs/2.22/html/">2.22</a>.
       </DD>
 
       <DT>
-         <FONT SIZE="+1"><A HREF="bugzilla2.20.x/"><B>Bugzilla2.20.x</B></A></FONT>
+         <FONT SIZE="+1"><A HREF="bugzilla2.20/"><B>Bugzilla2.20</B></A></FONT>
       </DT>
       <DD class="note">
           This is <a href="http://bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/2.20/html/">2.20.x</a>.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="bugzilla2.18.x/"><B>Bugzilla2.18.x</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/2.18/html/">2.18.x</a>.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="bugzilla2.16.x/"><B>Bugzilla2.16.x</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
-          <a href="http://www.bugzilla.org/docs/2.16/html/">2.16.x</a>.
-      </DD>
-
-      <DT>
-         <FONT SIZE="+1"><A HREF="update1.0/"><B>Update1.0</B></A></FONT>
-      </DT>
-      <DD class="note">
-          This is the MOZILLA_UPDATE_1_0_BRANCH of the <a href="http://update.mozilla.org">Update webtool</a>.
+          <a href="http://www.bugzilla.org/docs/2.20/html/">2.20</a>.
       </DD>
 
       <DT>
