Bug 432659: list the mozilla-central mxr on the front page.  r=reed

--- a/root/index.html
+++ b/root/index.html
@@ -71,17 +71,24 @@ dl.rootlist dd {
       <dl class="rootlist">
 
       <dt>
-         <a href="mozilla/">Mozilla</a>
+         <a href="mozilla-central/">Mozilla Central</a>
       </dt>
       <dd>
-          This contains the entire current CVS repository.
+          This contains the main mercurial (hg) repository for Gecko, XULRunner, and Firefox, the main line of development for releases after Gecko 1.9.0 / Firefox 3.0.
+      </dd>
+
+      <dt>
+         <a href="mozilla/">Mozilla CVS</a>
+      </dt>
+      <dd>
+          This contains the entire current CVS repository.  For Gecko, XULRunner, and Firefox, CVS trunk is no longer the trunk, and is instead used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
       </dd>
 
       <dt>
          <a href="seamonkey/">SeaMonkey</a> / <a href="l10n/">l10n</a>
       </dt>
       <dd>
-          This module is SeaMonkeyAll, the Mozilla browser project.
+          This the code in CVS for Gecko, XULRunner, Firefox, Thunderbird, Calendar, Camino, and SeaMonkey.  For Gecko, XULRunner, and Firefox, CVS trunk is only used for Gecko 1.9 / Firefox 3 and the 1.9.0.* / 3.0.* security releases.
       </dd>
 
       <dt>
