Remove devmo*, mozillafoundation-org, mozilla-com. Add js.

--- a/root/index.html
+++ b/root/index.html
@@ -188,7 +188,7 @@ dl.rootlist dd {
          <a href="bugzilla/">Bugzilla</a>
       </dt>
       <dd class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
+          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
           <a href="http://www.bugzilla.org/docs/tip/html/">tip</a>.
       </dd>
 
@@ -196,7 +196,7 @@ dl.rootlist dd {
          <a href="bugzilla3.0/">Bugzilla3.0</a>
       </dt>
       <dd class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
+          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
           <a href="http://www.bugzilla.org/docs/3.0/html/">3.0</a>.
       </dd>
 
@@ -204,7 +204,7 @@ dl.rootlist dd {
          <a href="bugzilla2.22/">Bugzilla2.22</a>
       </dt>
       <dd class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
+          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
           <a href="http://www.bugzilla.org/docs/2.22/html/">2.22</a>.
       </dd>
 
@@ -212,7 +212,7 @@ dl.rootlist dd {
          <a href="bugzilla2.20/">Bugzilla2.20</a>
       </dt>
       <dd class="note">
-          This is <a href="http://bugzilla.org/">Bugzilla</a>
+          This is <a href="http://www.bugzilla.org/">Bugzilla</a>
           <a href="http://www.bugzilla.org/docs/2.20/html/">2.20</a>.
       </dd>
 
@@ -220,21 +220,7 @@ dl.rootlist dd {
          <a href="mozilla-org/">mozilla-org</a>
       </dt>
       <dd class="note">
-          This is the <a href="http://mozilla.org">mozilla.org</a> website.
-      </dd>
-
-      <dt>
-         <a href="mozillafoundation-org/">mozillafoundation-org</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="http://mozillafoundation.org">mozillafoundation.org</a> website.
-      </dd>
-
-      <dt>
-         <a href="mozilla-com/">mozilla-com</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="http://mozilla.com">mozilla.com</a> website.
+          This is the <a href="http://www.mozilla.org">mozilla.org</a> website.
       </dd>
 
       <dt>
@@ -242,20 +228,6 @@ dl.rootlist dd {
       </dt>
       <dd class="note">
           This is the <a href="http://spreadfirefox.com">spreadfirefox.com</a> website.
-      </dd>
-
-      <dt>
-         <a href="devmo/">devmo</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="http://developer.mozilla.org">developer.mozilla.org</a> website.
-      </dd>
-
-      <dt>
-         <a href="devmowiki/">devmowiki</a>
-      </dt>
-      <dd class="note">
-          This is the <a href="http://developer.mozilla.org/wiki">developer.mozilla.org/wiki</a> website.
       </dd>
 
       </dl>
