Modify root treelist to add addons and change some text.

--- a/root/index.html
+++ b/root/index.html
@@ -217,17 +217,24 @@ dl.rootlist dd {
       </dd>
 
       <dt>
+         <a href="addons/">addons</a>
+      </dt>
+      <dd class="note">
+          This is the <a href="https://addons.mozilla.org/">addons.mozilla.org</a> website.
+      </dd>
+
+      <dt>
          <a href="mozilla-org/">mozilla-org</a>
       </dt>
       <dd class="note">
-          This is the <a href="http://www.mozilla.org">mozilla.org</a> website.
+          This is the <a href="http://www.mozilla.org/">www.mozilla.org</a> website.
       </dd>
 
       <dt>
          <a href="spreadfirefox/">spreadfirefox</a>
       </dt>
       <dd class="note">
-          This is the <a href="http://spreadfirefox.com">spreadfirefox.com</a> website.
+          This is the <a href="http://www.spreadfirefox.com">www.spreadfirefox.com</a> website.
       </dd>
 
       </dl>
