local changes for mxr-test

--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@ content that is indexed here.)
   ++ / good place
   -->
 
+<p>
+There are two MXRs running on <a
+href="http://landfill.bugzilla.org/">landfill.bugzilla.org</a>:
+<ul>
+<li><a href="http://mxr.landfill.bugzilla.org/$treename/">MXR for $treename</a> - pure <a
+href="../webtools/source/lxr">MXR from cvs</a>
+<li><a href="http://mxr-test.landfill.bugzilla.org/$treename/">MXR-test for $treename</a> - MXR from <a
+href="../webtools/source/lxr">MXR from cvs</a> with <a
+href="http://mxr-test.landfill.bugzilla.org/patches/">patches</a> applied (see <a
+href="http://mxr-test.landfill.bugzilla.org/patches/README">README</a>)
+</ul>
+
   </TD>
  </TR>
 </TABLE>
