Hyphenating Cross-Reference

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ change roots from within the search tools)</span>
   <TD ALIGN=LEFT VALIGN=TOP>
 
 
-<H1>Using this Cross Reference</H1>
+<H1>Using this Cross-Reference</H1>
 <P>This is a cross reference designed to display
 source code.
 Sources may be retrieved via <em>cvs</em>, <em>svn</em>, <em>git</em>,
