Completely rename mailnews to Thunderbird. Alias mailnews to Thunderbird.

--- a/root/index.html
+++ b/root/index.html
@@ -100,10 +100,10 @@ dl.rootlist dd {
       </dd>
 
       <dt>
-         <a href="mailnews/">Mail/News</a>
+         <a href="thunderbird/">Thunderbird</a>
       </dt>
       <dd class="note">
-          This contains the mail and news code on the trunk, including that
+          The source specific to the Thunderbird mail client, including that
           shared by both Seamonkey and Thunderbird (mozilla/mailnews/) as well
           as that which is Thunderbird-specific (mozilla/mail/).
       </dd>
