Bug 446355 - "need to add comm-central to MXR"

--- a/root/index.html
+++ b/root/index.html
@@ -78,6 +78,13 @@ dl.rootlist dd {
       </dd>
 
       <dt>
+         <a href="comm-central/">Comm. Central</a>
+      </dt>
+      <dd>
+          This contains the mercurial (hg) repository for Thunderbird, SeaMonkey, and Sunbird.
+      </dd>
+
+      <dt>
          <a href="mozilla/">Mozilla CVS</a>
       </dt>
       <dd>
