--- a/root/index.html
+++ b/root/index.html
@@ -317,7 +317,7 @@ compatible with Subversion and Mercurial.</p>
 <!-- this would be a good place for the mxr administrator to include
   ++ a contact link.
   -->
-<p>Issues with this installation of MXR can be <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Webtools&amp;component=LXR">filed in Bugzilla</a>.</p>
+<p>Issues with this installation of MXR can be <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Webtools&amp;component=MXR">filed in Bugzilla</a>.</p>
 
 <!--
   ++ / good place
