--- a/root/index.html
+++ b/root/index.html
@@ -71,7 +71,7 @@ dl.rootlist dd {
       <dl class="rootlist">
 
       <dt>
-         <a href="mozilla-central/">Mozilla Central</a>
+         <a href="mozilla-central/">Mozilla Central</a> / <a href="l10n-central/">l10n</a>
       </dt>
       <dd>
           This contains the main mercurial (hg) repository for Gecko, XULRunner, and Firefox, the main line of development for releases after Gecko 1.9.0 / Firefox 3.0.
