--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<HTML>
-<HEAD>
+<html>
+<head>
  <link rel="icon" href="/mxr.png" type="image/png">
  <title>Mozilla Cross-Reference</title>
  <style type="text/css">
@@ -14,34 +14,34 @@ font-size: 70%;
 }
 -->
 </style>
-</HEAD>
-<BODY   BGCOLOR="#FFFFFF" TEXT="#000000"
-	LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
+</head>
+<body   bgcolor="#ffffff" text="#000000"
+	link="#0000EE" vlink="#551a8b" alink="#ff0000">
 
 <table bgcolor="#000000" class=banner width="100%" border=0 cellpadding=0 cellspacing=0>
 <tr><td><a id="logo" href="http://www.mozilla.org/"><img
  src="http://www.mozilla.org/images/mozilla-banner.gif" alt="mozilla.org"
  border=0 width=600 height=58></a></td></tr></table>
 
-<TABLE BORDER=0 CELLPADDING=0 CELLSPACING=6 WIDTH="100%">
- <TR>
-  <TD WIDTH="35%" ALIGN=LEFT VALIGN=TOP>
+<table border=0 cellpadding=0 cellspacing=6 width="100%">
+ <tr>
+  <td width="35%" align=left valign=top>
 
-   <TABLE BORDER CELLPADDING=10 CELLSPACING=0 WIDTH="100%" BGCOLOR="#EEEEEE">
-    <TR>
-     <TD>
+   <table border cellpadding=10 cellspacing=0 width="100%" bgcolor="#eeeeee">
+    <tr>
+     <td>
 
 
 
-      <H2 ALIGN=CENTER><i>$treename</i> Starting Points</H2>
+      <h2 align=center><i>$treename</i> Starting Points</h2>
 
-         <FONT SIZE="+1"><A HREF="source/"><B>/$rootname</B></A></FONT>
-<BR>
-         <FONT SIZE="-1">
+         <font size="+1"><a href="source/"><b>/$rootname</b></a></font>
+<br>
+         <font size="-1">
           Browse from the root
           of this tree.
-         </FONT>
-<FORM METHOD=GET ACTION="find">
+         </font>
+<form method=get action="find">
 <div align="right">
 <br> <b><a href="search">Search for</a>:</b>
               <input type=text name="text" size=29 value="">
@@ -51,29 +51,29 @@ font-size: 70%;
 <option value="ident">ident
 </select>
 <br> <b><a href="find">File path</a>:</b>
-              <INPUT TYPE=TEXT NAME="string" maxlength="29" VALUE="" SIZE=29>
+              <input type=text name="string" maxlength="29" value="" size=29>
 <br>
-	      <INPUT TYPE=SUBMIT VALUE="Find">
+	      <input type=submit value="Find">
 </div>
-</FORM>
+</form>
 <p>
 <a href="../">Pick another root</a> <span class="note">(you can also
 change roots from within the search tools)</span>
-    </TR>
-   </TABLE>
+    </tr>
+   </table>
 
-  </TD>
-  <TD WIDTH=8></TD>
-  <TD ALIGN=LEFT VALIGN=TOP>
+  </td>
+  <td width=8></td>
+  <td align=left valign=top>
 
 
-<H1>Using this Cross-Reference</H1>
-<P>This is a cross reference designed to display
+<h1>Using this Cross-Reference</h1>
+<p>This is a cross reference designed to display
 source code.
 Sources may be retrieved via <em>cvs</em>, <em>svn</em>, <em>git</em>,
 <em>apt</em>, or through some other process.
 
-<P>It's possible to search through the entire source text (but this
+<p>It's possible to search through the entire source text (but this
 is very slow, it will work, but it is suggested that you at least
 include some simple file restriction by using the <a
 href="search">search</a> page)
@@ -81,22 +81,22 @@ or to <a href="find">find files</a> whose name matches a pattern;
 or to search for the <a href="ident">definitions</a> of particular
 functions, variables, etc.
 
-<P>The individual files of the source code are formatted on the fly
-and presented with clickable identifiers.  An <I>identifier</I> is a
+<p>The individual files of the source code are formatted on the fly
+and presented with clickable identifiers.  An <i>identifier</i> is a
 macro, typedef, struct, enum, union, function, function prototype or
 variable.  Clicking on them shows you a summary of how and where they
 are used.
 
-<P>The <A HREF="search">free-text search</A> feature is implemented
-using <A HREF="http://webglimpse.net/">Glimpse</A>, so all the
+<p>The <a href="search">free-text search</a> feature is implemented
+using <a href="http://webglimpse.net/">Glimpse</a>, so all the
 capabilities of Glimpse are available.  
-<A HREF="search-help.html">Regular expression</A> searches are
+<a href="search-help.html">Regular expression</a> searches are
 especially useful.
 
-<P>(Don't use a web-crawler to try and download all of these pages;
-the CGIs will feed you several <I>gigabytes</I> worth of generated HTML!)
+<p>(Don't use a web-crawler to try and download all of these pages;
+the CGIs will feed you several <i>gigabytes</i> worth of generated HTML!)
 
-<P>(That's beyond the nearly <strong>30 gigabytes</strong> worth of
+<p>(That's beyond the nearly <strong>30 gigabytes</strong> worth of
 content that is indexed here.)
 
 <p>
@@ -110,8 +110,8 @@ content that is indexed here.)
   ++ / good place
   -->
 
-  </TD>
- </TR>
-</TABLE>
+  </td>
+ </tr>
+</table>
 
-<P>
+<p>
