--- a/search-help.html
+++ b/search-help.html
@@ -1,17 +1,17 @@
-<HTML>
-<HEAD>
-<TITLE>mozilla cross-reference: search help</TITLE>
-</HEAD>
-<BODY   BGCOLOR="#FFFFFF" TEXT="#000000"
-	LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
+<html>
+<head>
+<title>mozilla cross-reference: search help</title>
+</head>
+<body   bgcolor="#ffffff" text="#000000"
+        link="#0000EE" vlink="#551a8b" alink="#ff0000">
 
 <table bgcolor="#000000" width="100%" border=0 cellpadding=0 cellspacing=0>
 <tr><td><a href="http://www.mozilla.org/"><img
  src="http://www.mozilla.org/images/mozilla-banner.gif" alt=""
  border=0 width=600 height=58></a></td></td></table>
 
-<H1 ALIGN=CENTER>search help<BR>
-<FONT SIZE=3>
+<h1 align=center>search help<br>
+<font size=3>
 for the<br>
 <a href="./"><i>mozilla cross-reference</i></a>
 </font></h1>
