adding desc class to descriptive top blob enables sites to choose whether to align things to the left or center the default is now left aligned

--- a/search-help.html
+++ b/search-help.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>mozilla cross-reference: search help</title>
+<link rel='stylesheet' title='' href='style/style.css' type='text/css'>
 </head>
 <body   bgcolor="#ffffff" text="#000000"
         link="#0000EE" vlink="#551a8b" alink="#ff0000">
@@ -9,7 +10,9 @@
 <tr><td><a href="http://www.mozilla.org/"><img
  src="http://www.mozilla.org/images/mozilla-banner.gif" alt=""
  border=0 width=600 height=58></a></td></td></table>
-
+<p>
+<table class=desc>
+<tr><td>
 <h1 align=center>search help<br>
 <font size=3>
 for the<br>
@@ -17,7 +20,7 @@ for the<br>
 </font></h1>
 </td></tr></table>
 
-<p><br>
+<p>
 <blockquote><blockquote>
 <i>
 This text is derived from the Glimpse manual page.
