--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <link rel="icon" href="/mxr.png" type="image/png">
  <title>Mozilla Cross-Reference</title>
+ <link rel='stylesheet' title='' href='style/style.css' type='text/css'>
  <style type="text/css">
 <!--
 div {
