trying to wrap most lines to about 80 columns

--- a/root/index.html
+++ b/root/index.html
@@ -267,9 +267,13 @@ dl.rootlist dd {
 <a href="http://www.mozilla.org/">Mozilla</a> source code.
 The sources displayed are those that are currently checked 
 in to the mainline of the mozilla.org
-<a href="http://developer.mozilla.org/en/docs/Mozilla_Source_Code_%28CVS%29">CVS server</a>,
-<a href="http://developer.mozilla.org/en/docs/Mozilla_Source_Code_%28Mercurial%29">Mercurial Server</a>,
-and <a href="http://wiki.mozilla.org/SVN">Subversion Server</a>;
+<a href=
+"http://developer.mozilla.org/en/docs/Mozilla_Source_Code_%28CVS%29"
+>CVS server</a>,
+<a href=
+"http://developer.mozilla.org/en/docs/Mozilla_Source_Code_%28Mercurial%29"
+>Mercurial Server</a>,
+and <a href="https://wiki.mozilla.org/SVN">Subversion Server</a>;
 these pages are updated many times a day, so they should
 be pretty close to the latest&#8209;and&#8209;greatest.</p>
 
@@ -318,7 +322,9 @@ compatible with Subversion and Mercurial.</p>
 <!-- this would be a good place for the mxr administrator to include
   ++ a contact link.
   -->
-<p>Issues with this installation of MXR can be <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Webtools&amp;component=MXR">filed in Bugzilla</a>.</p>
+<p>Issues with this installation of MXR can be <a href=
+"https://bugzilla.mozilla.org/enter_bug.cgi?product=Webtools&amp;component=MXR"
+>filed in Bugzilla</a>.</p>
 
 <!--
   ++ / good place
