--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@ content that is indexed here.)
   ++ a contact link.
   -->
 
-<p>Issues with this installation of MXR can be <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Webtools&amp;component=MXR">filed in Bugzilla</a>.</p>
+<p>Issues with this installation of MXR can be <a href=
+"https://bugzilla.mozilla.org/enter_bug.cgi?product=Webtools&amp;component=MXR"
+>filed in Bugzilla</a>.</p>
 
 <!--
   ++ / good place
